# os-neural-networks

./: README.md  pyproject.toml
neural_network/: cnn.py  feedforward.py  mlperceptron.py  perceptron.py  rnn.py
