[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["Manuel Martin Morante <manuzombiesbf1@gmail.com>"]
readme = "README.md"
packages = [{include = "neural_network"}]

[tool.poetry.dependencies]
python = "^3.9"
torchvision = "^0.15.2"
torch = "^2.0.1"
sklearn = "^0.0.post5"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
